text updated to k-team

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     
     <div class="content-section">
         <div class="container">
-            <h1>Built for Professionals</h1>
+            <h1>Built for Professionals K-Team</h1>
             <p>
                 Safiery creates power, energy, and switching products so people enjoy adventure.<br>
                 Travel globally on land or water without a genset.
